# codexstudySDD

./: .gitignore
week2/: .env  .env.example  .envrc  AGENTS.md  README.md  pyproject.toml  requirements.txt
week2/.codex/: config.toml  hooks.json
week2/.codex/scripts/: check_quality.py  validate_knowledge_json.py
week2/ai_knowledge_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
week2/hooks/: check_quality.py  validate_json.py
week2/knowledge/: checkpoint.json
week2/knowledge/articles/: aminekago-web-paradigm-survival-arena-5641568491d38179.json  apache-texera-ff1a584be3d120d5.json  ask-an-ai-expert-what-exactly-is-the-full-stack-e0616775a3b94cd0.json  celebrating-25-years-of-visual-search-innovation-bbfc4b37a73bf479.json  connect-more-of-your-apps-to-search-23c6974aa4b45f04.json  create-edit-and-star-in-videos-with-two-google-vids-updates-0560403cacf5a7a1.json  expanding-managed-agents-in-gemini-api-background-tasks-remo-ecda44a79d6b631e.json  fairlearn-fairlearn-7cec836eb89cd4e8.json  felladrin-minisearch-bae1b032fcd524d7.json  github-abnormal-codex-ai-pixel-design-a-33df2b33.json  github-aeon-toolkit-aeon-43ed1594.json  github-agnt-gg-agnt-75e4f986.json  github-albumentations-team-albucore-69b0aac7.json  github-aminekago-web-paradigm-survival-56415684.json  github-apache-texera-ff1a584b.json  (+75 more)
week2/pipeline/: __init__.py  __main__.py  collector.py  migrate.py  model_client.py  pipeline.py  rss_sources.yaml  storage.py
week2/tests/: test_mcp_knowledge_server.py  test_model_client.py  test_pipeline.py
(+55 files in other folders)
