[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-knowledge-pipeline"
version = "0.2.0"
description = "Resumable AI article collection pipeline with a local MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx[socks]>=0.27,<1",
  "PyYAML>=6,<7",
]

[project.scripts]
knowledge-pipeline = "pipeline.pipeline:main"

[tool.setuptools]
packages = ["pipeline", "knowledge_base"]

[tool.setuptools.package-dir]
knowledge_base = "src/knowledge_base"

[tool.setuptools.package-data]
pipeline = ["rss_sources.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
".codex/**/*.py" = ["I001"]
